examples/test/testpolicy2281.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2281
  namespace: namespace401
spec:
  podSelector:
    matchLabels:
      key37: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value0
          key48: value14
          key28: value47
      podSelector:
        matchLabels:
          key10: value4
          key36: value38
          key27: value10
